# geometric-algebra

./: LICENSE  geometric-algebra.cabal
Numeric/: GeometricAlgebra.hs
